--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ header {
   margin-bottom: 1%;
 }
 
+h1 {
+  padding: 1%;
+  text-align: center;
+}
+
 section {
   display: grid;
   /* grid-template-columns: 65% 30%; */
@@ -24,11 +29,37 @@ article {
 .article-1 {
   grid-column: 1/3;
   grid-row: 1/3;
+  display: grid;
+  grid-template-columns: 45% 45%;
+  grid-gap: 2%;
+  grid-auto-rows: 120px;
+}
+.a1,
+.a2,
+.a3,
+.a4,
+.a5,
+.a6 {
+  background-color: chocolate;
+  margin-left: 10%;
 }
 .article-2 {
   grid-column: 1/2;
   grid-row: 3/4;
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  grid-gap: 2%;
+  grid-auto-rows: 100px;
+  padding: 5%;
 }
+.article-2 .c1,
+.c2,
+.c3 {
+  background-color: wheat;
+  padding: 2%;
+  margin-top: 10%;
+}
+
 aside {
   background-color: chartreuse;
   padding: 1%;
@@ -36,10 +67,32 @@ aside {
 .aside-1 {
   grid-column: 3/4;
   grid-row: 1/4;
+  display: grid;
+  grid-template-columns: 70%;
+  grid-auto-rows: 30%;
+  grid-gap: 2%;
+  padding: 2%;
+}
+.b1,
+.b2,
+.b3 {
+  background-color: yellowgreen;
+  margin-left: 35%;
+  margin-top: 10%;
 }
 .aside-2 {
   grid-column: 2/3;
   grid-row: 3/4;
+  display: grid;
+  grid-template-columns: 90%;
+  grid-gap: 2%;
+  padding: 2%;
+}
+
+.d1,
+.d2 {
+  background-color: rgb(255, 0, 170);
+  margin-left: 10%;
 }
 
 footer {
@@ -47,4 +100,5 @@ footer {
   height: auto;
   background-color: red;
   margin-top: 3%;
+  padding: 1%;
 }
