--- a/style.css
+++ b/style.css
@@ -21,15 +21,17 @@ h1 {
 
 section {
   display: grid;
-  /* grid-template-columns: 65% 30%; */
   grid-auto-rows: 200px;
   grid-gap: 2%;
   margin-left: 1%;
 }
-article {
+article,
+aside {
   background-color: #66806a;
   padding: 1%;
+  border-radius: 5px;
 }
+
 .article-1 {
   grid-column: 1/3;
   grid-row: 1/3;
@@ -47,7 +49,10 @@ article {
   background-color: #142f43;
   margin-left: 10%;
   border-radius: 5px;
+  padding-top: 10%;
+  color: orangered;
 }
+
 .article-2 {
   grid-column: 1/2;
   grid-row: 3/4;
@@ -65,12 +70,12 @@ article {
   padding: 2%;
   margin-top: 10%;
   border-radius: 5px;
+  text-align: center;
+  padding-top: 30%;
+  font-weight: bold;
+  color: rgb(247, 117, 218);
 }
 
-aside {
-  background-color: #66806a;
-  padding: 1%;
-}
 .aside-1 {
   grid-column: 3/4;
   grid-row: 1/4;
@@ -83,10 +88,20 @@ aside {
 .b1,
 .b2,
 .b3 {
-  background-color: #142f43;
+  background-image: url("./imges/becode\ logo.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   margin-left: 35%;
   margin-top: 10%;
   border-radius: 5px;
+}
+
+.b1:hover,
+.b2:hover,
+.b3:hover {
+  transform: rotatey(180deg);
+  transform: rotatex(200deg);
 }
 .aside-2 {
   grid-column: 2/3;
@@ -100,8 +115,12 @@ aside {
 .d1,
 .d2 {
   background-color: #142f43;
-  margin-left: 10%;
+  text-align: center;
   border-radius: 5px;
+  padding-top: 10%;
+  color: yellowgreen;
+  font-weight: bold;
+  margin-left: 10%;
 }
 
 footer {
@@ -110,4 +129,15 @@ footer {
   background-color: #142f43;
   margin-top: 3%;
   padding: 1%;
+  text-align: center;
+}
+
+footer a {
+  text-align: center;
+  text-decoration: none;
+  color: white;
+}
+
+footer a:hover {
+  color: black;
 }
